# corgi_system

./: CMakeLists.txt  README.md  package-lock.json  simulation.sh
js/control_panel/: Load_proto.js  quadruped.js
protos/: geometry.proto  motor.proto  power.proto  robot.proto  sensor.proto
src/: CMakeLists.txt
src/bak/estimation copy/: CMakeLists.txt  ObservationModel.cpp  Optimizer.hpp  csv_reader.hpp  estimation.cpp  tools.h
src/bak/estimation.bak/: CMakeLists.txt  ObservationModel.hpp  Optimizer.hpp  estimation.cpp  record_data.cpp
src/bak/estimation_0131/: CMakeLists.txt  Estimator.cpp  Estimator.hpp  ObservationModel.cpp  ObservationModel.hpp  Optimizer.hpp  estimation.cpp  estimation2.cpp  record_data.cpp
src/cpg/: CMakeLists.txt  Kuramoto.cpp  Kuramoto.hpp  cpg.cpp  cpg.hpp  main.cpp
src/estimation/: CMakeLists.txt  ContactMap.hpp  KF.cpp  KF.hpp  KF_webot.cpp  test_kf.cpp
src/imu/: cx5.hpp  imu_listen.cpp
src/kinematic/: CMakeLists.txt  RigidBodyKinematic.hpp  quicktest.cpp
src/myCPGs/: CMakeLists.txt  MyCPGs.cpp  MyCPGs.hpp  MyForceOptimizer.cpp  MyForceOptimizer.hpp  main.cpp
